--- a/topseat/templates/aplicacion/verMapa.html
+++ b/topseat/templates/aplicacion/verMapa.html
@@ -48,7 +48,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgRVbcHWYWlj4szLhvJI6BNWdrl_LJxZM&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_KEY&callback=initMap">
     </script>
 	
 	
