Cambios de Seguridad

--- a/topseat/templates/aplicacion/verMapa.html
+++ b/topseat/templates/aplicacion/verMapa.html
@@ -48,7 +48,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW764CsEG3FtYXNlMan5x-iU2gzGu0Aek&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
     </script>
 	
 	
