--- a/topseat/templates/aplicacion/confirmarReserva.html
+++ b/topseat/templates/aplicacion/confirmarReserva.html
@@ -63,7 +63,7 @@ for (i = 0; i < close.length; i++) {
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBW764CsEG3FtYXNlMan5x-iU2gzGu0Aek&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
     </script>
 	
 	<p style="text-align:center;"><b>Origen:</b> {{inicio}}
