--- a/topseat/templates/aplicacion/pasajero.html
+++ b/topseat/templates/aplicacion/pasajero.html
@@ -26,6 +26,7 @@ for (i = 0; i < close.length; i++) {
 
 
 <h3>Pasajero</h3>
+<div style ="overflow-x:auto;">
 <table id="t01">
   <tr>
     <th>Hora</th>
@@ -67,8 +68,10 @@ for (i = 0; i < close.length; i++) {
   </tr>
   {%endfor%}
 </table>
+</div>
 
 <h3>Reservas</h3>
+<div style ="overflow-x:auto;">
 <table id="t01">
   <tr>
     <th>Hora</th>
@@ -95,6 +98,7 @@ for (i = 0; i < close.length; i++) {
   </tr>
   {%endfor%}
 </table>
+</div>
 
 
 {%endblock content%}
