--- a/topseat/templates/aplicacion/verMapa.html
+++ b/topseat/templates/aplicacion/verMapa.html
@@ -48,7 +48,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvljkx6Npy1ByLOU3nMIN58HRY408pR34&callback=initMap">
     </script>
 	
 	
