--- a/topseat/templates/baseApp.html
+++ b/topseat/templates/baseApp.html
@@ -1,47 +1,58 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
   <head>
-    {%load staticfiles%}
 	<script type="text/javascript" src="{% static 'js/closeBtn.js' %}"></script>
     <title>TOP SEAT - App</title>
   </head>
-  <body>{% load staticfiles %}
+  <body>
   <meta charset="UTF-8" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 
-  <ul class="top">
-    <li class="top">
-      <a href="{%url 'aplicacion:aplicacion_home'%}">Inicio</a>
-    </li>
-    <li class="top">
-      <a href="#Blog">Blog</a>
-    </li>
-    <li class="top">
-      <a href="#Faq">Faq</a>
-    </li>
-    <li style="float:right" class="dropdown">
-      <a href="javascript:void(0)" class="dropbtn">Bienvenido, {{rol}} {{usuario}}</a>
-      <div class="dropdown-content">
-        <form action="{%url 'cuentas:editar_perfil'%}" method="get">{% csrf_token %} 
-        <a href="javascript:;" onclick="parentNode.submit();">Editar Perfil</a> 
-        <input type="hidden" name="changeR" value="Cambiar Rol" /></form>
-        <form action="{%url 'cuentas:cambiar'%}" method="post">{% csrf_token %} 
-        <a href="javascript:;" onclick="parentNode.submit();">Cambiar Rol</a> 
-        <input type="hidden" name="changeR" value="Cambiar Rol" /></form>
-		{%if rol == 'Conductor'%}
-		<form action="{%url 'aplicacion:registro_vehiculo'%}" method="get">{% csrf_token %} 
-        <a href="javascript:;" onclick="parentNode.submit();">Registrar Vehiculo</a> 
-        <input type="hidden" name="changeR" value="Cambiar Rol" /></form>
-		{%endif%}
-        <form action="{%url 'cuentas:logout' %}" method="post">{% csrf_token %} 
-        <a href="javascript:;" onclick="parentNode.submit();">Cerrar Sesion</a> 
-        <input type="hidden" name="cerrar" value="Cerrar Sesion" /></form>
-      </div>
-    </li>
-  </ul>
-  <h1>TOP SEAT</h1>
+<header>
+	<div class ="menu_bar">
+		<div class ="logo">
+			<h1>Top Seat</h1>
+		</div>
+		<div class="menu">
+		<nav>
+	  <ul class="side-nav">
+		<li >
+		  <a href="{%url 'aplicacion:aplicacion_home'%}">Inicio</a>
+		</li>
+		<li>
+		  <a href="#Blog">Blog</a>
+		</li>
+		<li>
+		  <a href="#Faq">Faq</a>
+		</li>
+		<li class="dropdown">
+		  <a href="javascript:void(0)" class="dropbtn">Bienvenido, {{rol}} {{usuario}}</a>
+		  <div class="dropdown-content">
+			<form action="{%url 'cuentas:editar_perfil'%}" method="get">{% csrf_token %} 
+			<a href="javascript:;" onclick="parentNode.submit();">Editar Perfil</a> 
+			<input type="hidden" name="changeR" value="Cambiar Rol" /></form>
+			<form action="{%url 'cuentas:cambiar'%}" method="post">{% csrf_token %} 
+			<a href="javascript:;" onclick="parentNode.submit();">Cambiar Rol</a> 
+			<input type="hidden" name="changeR" value="Cambiar Rol" /></form>
+			{%if rol == 'Conductor'%}
+			<form action="{%url 'aplicacion:registro_vehiculo'%}" method="get">{% csrf_token %} 
+			<a href="javascript:;" onclick="parentNode.submit();">Registrar Vehiculo</a> 
+			<input type="hidden" name="changeR" value="Cambiar Rol" /></form>
+			{%endif%}
+			<form action="{%url 'cuentas:logout' %}" method="post">{% csrf_token %} 
+			<a href="javascript:;" onclick="parentNode.submit();">Cerrar Sesion</a> 
+			<input type="hidden" name="cerrar" value="Cerrar Sesion" /></form>
+		  </div>
+		</li>
+	  </ul>
+	  </nav>
+	</div>
+</div>
+</header>
 	
   {% block content %} {% endblock content %}</body>
 </html>
