--- a/topseat/templates/aplicacion/pasajero.html
+++ b/topseat/templates/aplicacion/pasajero.html
@@ -44,7 +44,7 @@ for (i = 0; i < close.length; i++) {
    <tr>
     <td>{{item.hora}}</td>
 	<td>{{item.fecha}}</td>
-    <td>{{item.conductor.username}}</td> 
+    <td>{{item.conductor.usuario.first_name}} {{item.conductor.usuario.last_name}}</td> 
     <td>{{item.puestos_d}}</td>
 	<td>{{item.ruta.inicio}}</td>
 	<td>{{item.ruta.fin}}</td>
@@ -85,9 +85,13 @@ for (i = 0; i < close.length; i++) {
    <tr>
     <td>{{item.viaje.hora}}</td>
 	<td>{{item.viaje.fecha}}</td>
-    <td>{{item.viaje.conductor.first_name}} {{item.viaje.conductor.last_name}}</td> 
+    <td>{{item.viaje.conductor.usuario.first_name}} {{item.viaje.conductor.usuario.last_name}}</td> 
     <td>{{item.cantidadPuestos}}</td>
-	<td>{{item.viaje.conductor.email}}</td>
+	{%if movil%}
+		<td><a href="https://api.whatsapp.com/send?phone=57{{item.viaje.conductor.celular}}" target="_blank">{{item.viaje.conductor.celular}}</a></td>
+	{%else%}
+		<td><a href="https://web.whatsapp.com/send?phone=57{{item.viaje.conductor.celular}}" target="_blank">{{item.viaje.conductor.celular}}</a></td>
+	{%endif%}
 	<td style="text-align:center;">
 		<form action="{%url 'aplicacion:eliminarReserva'%}" method="post">
 			{% csrf_token %}
