--- a/topseat/templates/cuentas/login.html
+++ b/topseat/templates/cuentas/login.html
@@ -27,7 +27,7 @@
 	{% if request.GET.next%}
 		<input type="hidden" name="next" value="{{request.GET.next}}">
 	{%endif%}
-	<input type="Submit" value="Login">.
+	<input type="Submit" value="Iniciar Sesión.">.
 </form>
 
 <form class ="site-form" action="{%url 'cuentas:signup'%}" method="get">
