--- a/topseat/templates/topseat/home.html
+++ b/topseat/templates/topseat/home.html
@@ -1,12 +1,42 @@
 {%extends "base.html"%}
 
 {%block content%}
-<form action="/AdmonCuentas/login" method="get">
-    <input type="submit" value="Ingreso" 
-         name="Ingreso" />
-</form>
-<form action="/AdmonCuentas/signup" method="get">
-    <input type="submit" value="Registro" 
-         name="Registro" />
-</form>
+
+<div class="image_container"></div>
+<div class="image_title">MOVILIDAD INTEGRAL</div>
+<div class="image_subtitle">Transporte compartido entre la misma comunidad universitaria</div>
+<div class="info">
+    <div class="info_title">
+        <h1>¿QUE ES TOPSEAT?</h1>
+    </div>
+    <div class="info_body">
+        <p>Software basado en la web. Preferido por comunidades universitarias que deseen transportarse de una manera fácil, económica, segura y consciente del medio ambiente.</p>
+    </div>
+</div>
+<div class="info2">
+    <div class="info_title2">
+        <h1>¿CÓMO FUNCIONA?</h1>
+    </div>
+    <div class="info_body2">
+
+        <p><img src="img/team.png" style="width:200px;height:200px;margin-left:15px;margin-top:10px;">
+            <b>Se parte de la comunidad</b></br></br>
+            Registrate y conoce conductores que se dirigen cerca a tu dirección. Tambien, puedes ser parte de las personas que prestan el servicio.
+        </p>
+
+        <p><img src="img/car.png" style="width:180px;height:180px;float:right;margin-left:25px">
+            <b></br></br></br></br></br></br></br>Escoja un viaje compartido</b></br></br>
+            Seleccione un viaje que se adapte a su horario. Viaje o maneje para satisfacer sus necesidades diarias o las de otras personas.
+        </p>
+
+        <p><img src="img/road-trip.png" style="width:200px;height:200px;float:left;margin-left:25px">
+            <b></br></br></br></br></br></br></br>Disfrute del viaje</b></br></br>
+            Conozca gente nueva y aproveche al máximo su tiempo.
+        </p>
+    </div>
+
+    <div class="info" style="height: 1%;">
+    </div>
+</div>
+
 {%endblock content%}
