--- a/topseat/static/css/style.css
+++ b/topseat/static/css/style.css
@@ -95,7 +95,7 @@ nav a:hover::before {
 }
 
 
-  
+
 
 
 .buttons {
@@ -141,11 +141,132 @@ nav a:hover::before {
     background-image: url('img/image2.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    width:1440px; 
+    width:1440px;
     height:600px;
     background-size: 100%;
-    
-  }
+    opacity: 0.95;
+    filter: brightness(0.5);
+ }
+
+ .image_title {
+    position: relative;
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: 500%;
+    font-weight: 600;
+    letter-spacing: 3px;
+    color: white;
+
+    width:1440px;
+    height:600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 1px 1px gray;
+ }
+
+ .image_subtitle {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    font-family: 'DVerdana', sans-serif;
+    font-size: 100%;
+    font-weight: 500;
+    letter-spacing: 4px;
+    color: white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 1px 1px gray;
+ }
+
+ .info {
+    background: white;
+    width:1440px;
+    height:300px;
+    padding-top: 10%;
+    display: inline-block;
+    left:100%;
+    text-align: center;
+ }
+
+ .info_title {
+    background: white;
+    display: flex;
+    width: 100%;
+    height: 12%;
+
+    justify-content: center;
+    align-items: center;
+ }
+
+ .info_body {
+    background: white;
+    display: flex;
+    width: 80%;
+    height: 12%;
+    font-family: 'DVerdana', sans-serif;
+    letter-spacing: 2px;
+    padding-top: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+
+    justify-content: center;
+    align-items: center;
+ }
+
+ .info2 {
+    background: #E7E7E7;
+    width:1440px;
+    height:1200px;
+    padding-top: 5%;
+    display: inline-block;
+    left:100%;
+    text-align: center;
+ }
+
+ .info_title2 {
+    background: #E7E7E7;
+    display: flex;
+    width: 100%;
+    height: 12%;
+
+    justify-content: center;
+    align-items: center;
+ }
+
+ .info_body p, .info_body2 p{
+    margin-top: 35px;
+    margin-left: 25px;
+    font-size: 20px;
+    text-align: justify;
+ }
+
+ .quest p{
+    margin-top: 2%;
+    margin-left: 2%;
+    font-size: 20px;
+    text-align: justify;
+ }
+
+ img {
+    float: left;
+    padding-right: 10%;
+    padding-left: 10%;
+    margin-top:130px
+ }
+
+ .info_body2 {
+    background: #E7E7E7;
+    display: inline-block;
+    width: 50%;
+    height: 100%;
+    font-family: 'DVerdana', sans-serif;
+    letter-spacing: 2px;
+    padding-top: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+ }
 
 @media screen and (max-width: 350px) {
     nav li {
@@ -156,7 +277,7 @@ nav a:hover::before {
         align-content: center;
         top: 0;
     }
-    
+
     .menu_bar {
         display: inline-block;
         width: 100%;
@@ -200,7 +321,7 @@ nav a:hover::before {
         align-content: center;
         top: 0;
     }
-    
+
     .menu_bar {
         display: inline-block;
         width: 100%;
@@ -232,7 +353,7 @@ nav a:hover::before {
         height: 180px;
     }
 
-    
+
 }
 
 @media screen and (min-width: 401px) and (max-width: 700px) {
@@ -244,7 +365,7 @@ nav a:hover::before {
         align-content: center;
         top: 0;
     }
-    
+
     .menu_bar {
         display: inline-block;
         width: 100%;
@@ -381,4 +502,3 @@ html, body {
         padding: 0;
 		padding-bottom: 50px;
 }
-
