--- a/topseat/static/css/style.css
+++ b/topseat/static/css/style.css
@@ -268,6 +268,42 @@ nav a:hover::before {
     padding-right: 10%;
  }
 
+ .fqa {
+     background: #E7E7E7;
+     position: absolute;
+     width:100%;
+     height:100%;
+     display: inline-block;
+     padding-top: 3%;
+     align-content: center;
+     padding-bottom: 110%;
+ }
+
+ .quest {
+     background: white;
+     width: 50%;
+     height: 20%;
+
+     padding-top: 2%;
+     padding-left: 5%;
+     padding-right: 5%;
+
+     justify-content: center;
+     align-items: center;
+     margin: 3% auto auto auto;
+     border-radius: 12px 12px 12px 12px;
+ }
+
+ .fqa_title {
+     background: #E7E7E7;
+     display: flex;
+     width: 100%;
+     height: 12%;
+
+     justify-content: center;
+     align-items: center;
+ }
+
 @media screen and (max-width: 350px) {
     nav li {
         display: inline-block;
