--- a/topseat/templates/AdmonCuentas/signup.html
+++ b/topseat/templates/AdmonCuentas/signup.html
@@ -2,9 +2,9 @@
 
 
 {%block content%}
-<div class = "log_in">
-<h1>Inicia Sesión</h1>
-<p> o <a href="{%url 'AdmonCuentas:login'%}">crea una cuenta</a></p>
+<div class = "sign_up">
+<h1>Regístrate</h1>
+<p> o <a href="{%url 'AdmonCuentas:login'%}">inicia sesión</a></p>
 
 {%if error%}
 <div class="alert">
