--- a/topseat/templates/AdmonCuentas/login.html
+++ b/topseat/templates/AdmonCuentas/login.html
@@ -3,7 +3,7 @@
 {%block content%}
 
 <div class = "log_in">
-<h1>Resgistrate</h1>
+<h1>Inicia Sesión</h1>
 <p> o <a href="{%url 'AdmonCuentas:signup'%}">crea una cuenta</a></p>
 
 {%if error%}
@@ -29,7 +29,7 @@
 	{% if request.GET.next%}
 		<input type="hidden" name="next" value="{{request.GET.next}}">
 	{%endif%}
-	<input type="Submit" value="Iniciar Sesión.">.
+	<input type="Submit" value="Iniciar Sesión">
 </form>
 
 <form class ="site-form" action="{%url 'AdmonCuentas:signup'%}" method="get">
